--- a/src/Example01/DC.Example01/DC.Example01.Web/package.json
+++ b/src/Example01/DC.Example01/DC.Example01.Web/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js"
+    "test": "karma start ClientApp/test/karma.conf.js",
+    "webpack:vendor": "webpack --config webpack.config.vendor.js"
   },
   "dependencies": {
     "@angular/animations": "^4.3.6",
@@ -19,7 +20,15 @@
     "@angular/router": "^4.3.6",
     "@ngtools/webpack": "1.5.0",
     "@progress/kendo-angular-buttons": "^1.0.5",
+    "@progress/kendo-angular-dateinputs": "^1.0.6",
+    "@progress/kendo-angular-dropdowns": "^1.1.3",
+    "@progress/kendo-angular-excel-export": "^1.0.3",
+    "@progress/kendo-angular-grid": "^1.3.3",
+    "@progress/kendo-angular-inputs": "^1.1.1",
+    "@progress/kendo-angular-intl": "^1.2.2",
     "@progress/kendo-angular-l10n": "^1.0.3",
+    "@progress/kendo-data-query": "^1.0.6",
+    "@progress/kendo-drawing": "^1.2.1",
     "@progress/kendo-theme-default": "^2.40.2",
     "@types/webpack-env": "1.13.0",
     "angular2-template-loader": "0.6.2",
